Ending CARD__HEADER and CARD__IMAGE

--- a/index.html
+++ b/index.html
@@ -1,12 +1,43 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Подарочный набор для сдачи ДНК-теста доставлен</title>
-    <link rel="stylesheet" href="../page/index.css">
+    <link rel="stylesheet" href="../pages/index.css">
 </head>
-<body>
-    
+
+<body class="page">
+    <section class="card">
+        <div class="card__header">
+            <ul class="card__meta-list">
+                <li class="card__meta-item">
+                    <span class="card__meta card__meta_company">GENOTEK</span>
+                </li>
+                <li class="card__meta-item">
+                    <span class="card__meta">неделю назад</span>
+                </li>
+                <li class="card__meta-item">
+                    <span class="card__meta card__meta_access card__meta_access-icon">
+                        доступно только мне
+                    </span>
+                </li>
+            </ul>
+            <h1 class="card__title">
+                Подарочный набор для сдачи ДНК-теста доставлен
+            </h1>
+            <p class="card__subtitle">
+                Спасибо, что выбрали Genotek! На упаковке вы найдете подробную инструкцию как сдать ДНК-тест.
+            </p>
+        </div>
+        <img src="/images/gift.jpg" alt="Подарок" class="card__image">
+        <article>
+            <h2>
+                Как подарить набор другу, чтобы он создал свой личный кабинет?
+            </h2>
+        </article>
+    </section>
 </body>
+
 </html>
