--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Подарочный набор для сдачи ДНК-теста доставлен</title>
-    <link rel="stylesheet" href="../pages/index.css">
+    <link rel="stylesheet" href="pages/index.css">
 </head>
 
 <body class="page">
@@ -33,7 +33,7 @@
                 Спасибо, что выбрали Genotek! На упаковке вы найдете подробную инструкцию как сдать ДНК-тест.
             </p>
         </div>
-        <img src="/images/gift.jpg" alt="Подарок" class="card__image">
+        <img src="images/gift.jpg" alt="Подарок" class="card__image">
         <div class="accordion">
             <article class="accordion__item">
                 <h2 class="accordion__title accordion__title_icon">
@@ -68,7 +68,7 @@
                             </p>
                         </div>
                         <div class="accordion__column-right">
-                            <img src="/images/box-personal-copy-2@3x.jpg" alt="Вход" class="accordion__image">
+                            <img src="images/content.jpg" alt="Вход" class="accordion__image">
                         </div>
                     </div>
                 </div>
@@ -93,9 +93,9 @@
                             </p>
                         </div>
                         <div class="accordion__column-right">
-                            <img src="/images/box-personal-copy-2@3x.jpg" alt="Вход" class="accordion__image">
+                            <img src="images/content.jpg" alt="Вход" class="accordion__image">
                         </div>
-                        <div>
+                        <div class="accordion__column-form">
                             <form class="form" action="#">
                                 <input type="text" placeholder="Логин" class="form__control">
                                 <input type="text" placeholder="Пароль" class="form__control">
