--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 
 <head>
+    <base href="{{ site.baseurl }}/">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Подарочный набор для сдачи ДНК-теста доставлен</title>
